...
  return (
    <Screen>
      <View style={styles.container}>
        <View style={styles.header}>
          <Back home={{ name: "GamesList" }} />
          <View style={styles.titleContainer}>
            <Text style={styles.titleText}>New Game</Text>
          </View>
          <TouchableOpacity
            onPress={toggleViewMode}
            style={styles.viewModeButton}
            hitSlop={{ top: 12, bottom: 12, left: 12, right: 12 }}
          >
...
          >
            {() => <NewGameFavorites viewMode={viewMode} />}
          </Tabs.Screen>
          <Tabs.Screen
            name="NewGameSearch"
            options={{
              title: "Search",
            }}
          >
            {() => <NewGameSearch viewMode={viewMode} />}
          </Tabs.Screen>
        </Tabs.Navigator>
      </View>
...
