...
  };

  return (
    <TouchableOpacity
      onPress={handleGamePress}
      style={styles.container}
      testID="game-list-item"
    >
      <View style={styles.game}>
        <Text style={styles.gameName}>{loadedGame.name}</Text>
        <Text style={styles.gameDateTime}>
          {loadedGame.start.toLocaleDateString()} -{" "}
          {loadedGame.start.toLocaleTimeString([], {
...
        {playerNames && <Text style={styles.playerNames}>{playerNames}</Text>}
      </View>
      <TouchableOpacity
        onPress={handleSettingsPress}
        style={styles.actions}
        hitSlop={{ top: 10, bottom: 10, left: 10, right: 10 }}
        testID="game-list-item-settings"
      >
        <FontAwesome6 name="gear" size={18} color="#666" iconStyle="solid" />
      </TouchableOpacity>
    </TouchableOpacity>
  );
}
...
