...
  return (
    <>
      <Pressable
        style={styles.deleteButton}
        onPress={() => setShowModal(true)}
        disabled={!canDelete}
        testID="delete-game-button"
      >
        <View style={styles.deleteButtonLeft}>
          <FontAwesome6
            name="trash-can"
            iconStyle="solid"
            size={12}
...
              >
                <Text style={styles.cancelButtonText}>Cancel</Text>
              </Pressable>
              <Pressable
                style={styles.confirmButton}
                onPress={handleDelete}
                testID="delete-game-confirm"
                accessible={true}
              >
                <Text style={styles.confirmButtonText}>Delete</Text>
              </Pressable>
            </View>
          </Pressable>
...
